# EasyTextEditor

./: .gitignore  CMakeLists.txt  LICENSE
MainUi/: CMakeLists.txt  resource.qrc
MainUi/include/MainUi/: about.h  mainwindow.h  setting.h  sql.h  version.h
MainUi/include/mainui/: about.h  mainwindow.h  relpacedialog.h  replace.h  search.h  version.h
MainUi/src/: about.cpp  main.cpp  mainwindow.cpp  relpacedialog.cpp  replace.cpp  search.cpp  setting.cpp
MainUi/ui/: about.ui  mainwindow.ui  relpacedialog.ui  replace.ui  search.ui  setting.ui
Model/: CMakeLists.txt
Model/include/Model/: AbstractDocument.h  BaseDocument.h  Setting.h  TxtDocument.h
Model/src/: AbstractDocument.cpp  BaseDocument.cpp  Setting.cpp  TxtDocument.cpp
SQLiteSupport/: CMakeLists.txt
SQLiteSupport/include/SQLIteSupport/: CppSQLite3.h  SQLite3
SQLiteSupport/include/SQLiteSupport/: CppSQLite3.h
SQLiteSupport/src/: CppSQLite3.cpp
