#指定cmake的最小版本号
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
#指定项目名称
PROJECT(EasyTextEditor LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -D QT_NO_DEBUG_OUTPUT" )   # release包优化

ADD_SUBDIRECTORY(Model)
ADD_SUBDIRECTORY(MainUI)
