#指定cmake的最小版本号
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
#指定项目名称
PROJECT(EasyTextEditor VERSION 1.0.2 LANGUAGES CXX)

ADD_DEFINITIONS(-DPROJECT_NAME="简易记事本")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -D QT_NO_DEBUG_OUTPUT")   # release包优化

SET(CMAKE_PREFIX_PATH "D:\\Development\\Qt\\6.5.0\\mingw_64")

FIND_PACKAGE(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Core)
FIND_PACKAGE(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets PrintSupport)


ADD_SUBDIRECTORY(Model)
ADD_SUBDIRECTORY(MainUI)
