#指定cmake的最小版本号
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
#指定项目名称
PROJECT(EasyTextEditor VERSION 1.0.4 LANGUAGES CXX)

ADD_DEFINITIONS(-DPROJECT_NAME="简易记事本")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -D QT_NO_DEBUG_OUTPUT")   # release包优化

ADD_SUBDIRECTORY(SQLiteSupport)
ADD_SUBDIRECTORY(Model)
ADD_SUBDIRECTORY(MainUI)
