FILE(GLOB_RECURSE srcs include/*.h src/*.cpp)

SET(CMAKE_AUTORCC OFF)
SET(CMAKE_AUTOUIC OFF)

SET(CMAKE_PREFIX_PATH "D:\\Development\\Qt\\6.5.1\\mingw_64")
FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core)

ADD_LIBRARY(Model STATIC ${srcs})
TARGET_LINK_LIBRARIES(Model PRIVATE Qt${QT_VERSION_MAJOR}::Core)
TARGET_INCLUDE_DIRECTORIES(Model PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
