FILE(GLOB_RECURSE srcs include/*.h src/*.cpp)

PROJECT(SQLiteSupport LANGUAGES CXX)

set(CMAKE_AUTOUIC OFF)
set(CMAKE_AUTOMOC OFF)
set(CMAKE_AUTORCC OFF)

ADD_SUBDIRECTORY(Third_party)
ADD_LIBRARY(SQLiteSupport STATIC ${srcs})
TARGET_LINK_LIBRARIES(SQLiteSupport PUBLIC SQLite)
TARGET_INCLUDE_DIRECTORIES(SQLiteSupport PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
